frontend/src/styles/popups.scss
/* ... */
#resultEditTagsPanelWrapper {
  #resultEditTagsPanel {
    background: var(--bg-color);
    border-radius: var(--roundness);
    padding: 2rem;
    display: grid;
    gap: 1rem;
    overflow-y: scroll;
    width: 500px;

    .buttons {
      display: grid;
      gap: 1rem;
      grid-template-columns: 1fr 1fr 1fr;
    }
  }
}

#versionHistoryModal {
  .modal {
    @extend .ffscroll;
    overflow-y: scroll;
    min-width: 800px;

    hr {
      background: var(--sub-alt-color);
      height: 0.25rem;
      border: none;
      border-radius: var(--roundness);
      margin: 1rem 0;
    }

    h3 {
      color: var(--sub-color);
      font-size: 1.25rem;
      margin: 0 0 0.5rem 0;
    }

    .preloader {
      color: var(--main-color);
      display: grid;
      place-content: center center;
      font-size: 2rem;
    }

    .tip {
      text-align: center;
      color: var(--sub-color);
    }

    .releases {
      display: grid;
      gap: 4rem;

      .release {
        display: grid;
        grid-template-areas:
          "title date"
          "body body";

        .title {
          grid-area: title;
          font-size: 2rem;
          color: var(--sub-color);
        }

        .date {
          grid-area: date;
          text-align: right;
          color: var(--sub-color);
          align-self: center;
        }

        .body {
          grid-area: body;
          color: var(--text-color);
        }

        &:last-child {
          margin-bottom: 2rem;
        }
      }
    }
  }
}

#supportModal {
  .modal {
    max-width: 900px;
    width: 100%;
    // height: 400px;
    overflow-y: scroll;
    max-height: 100%;
    background: var(--bg-color);
    border-radius: var(--roundness);
    display: grid;
    gap: 1rem;
    @extend .ffscroll;

    .title {
      font-size: 1.5rem;
      color: var(--sub-color);
    }

    .text {
      color: var(--text-color);
    }

    .subtext {
      color: var(--sub-color);
      font-size: 0.75rem;
    }

    .buttons {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
      gap: 1rem;

      button,
      .button {
        display: block;
        width: 100%;
        height: 100%;
        padding: 1rem 0;
        display: grid;
        gap: 1rem;
        text-decoration: none;
        .text {
          transition: 0.25s;
        }
        &:hover .text {
          color: var(--bg-color);
        }
        .icon {
          font-size: 3rem;
          line-height: 3rem;
        }
      }
    }
  }
}
#shareCustomThemeModal {
  .modal {
    max-width: 400px;

    .buttons {
      display: grid;
      gap: 1rem;
      grid-template-columns: 1fr 1fr 1fr;
    }

    .title {
      font-size: 1.5rem;
      line-height: 1.5rem;
      color: var(--sub-color);
    }
  }
}
#shareCustomThemeUrlModal {
  .modal {
    max-width: 900px;
  }
}
#contactModal {
  .modal {
    overflow-y: scroll;
    display: grid;
    gap: 1rem;
    @extend .ffscroll;
    max-width: 900px;

    .title {
      font-size: 1.5rem;
      line-height: 2rem;
      color: var(--sub-color);
    }

    .text {
      color: var(--text-color);
      span {
        color: var(--error-color);
      }
    }

    .buttons {
      display: grid;
      gap: 1rem;
      grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));

      .button {
        padding: 1rem;
        gap: 1rem;
        display: grid;
        grid-template-areas: "icon textgroup";
        grid-template-columns: auto 1fr;
        text-align: left;
        align-items: center;
        .textGroup {
          grid-area: textgroup;
        }
        .text {
          font-size: 1.5rem;
          line-height: 2rem;
          transition: 0.125s;
        }
        &:hover .text {
          color: var(--bg-color);
        }
        .icon {
          grid-area: icon;
          font-size: 2rem;
          line-height: 2rem;
        }
      }
    }
  }
}

#presetWrapper {
  #presetEdit {
    .title {
      font-size: 1.5rem;
      color: var(--sub-color);
    }
    background: var(--bg-color);
    border-radius: var(--roundness);
    padding: 2rem;
    display: grid;
    gap: 1rem;
    overflow-y: scroll;
  }
}

#streakHourOffsetPopupWrapper {
  #streakHourOffsetPopup {
    .title {
      font-size: 1.5rem;
      color: var(--sub-color);
    }
    width: 400px;
    background: var(--bg-color);
    border-radius: var(--roundness);
    padding: 2rem;
    display: grid;
    gap: 1rem;
    overflow-y: scroll;
    .red {
      color: var(--error-color);
    }
  }
}

#tagsWrapper,
#newResultFilterPresetPopupWrapper,
#editProfilePopupWrapper {
  #tagsEdit,
  #newResultFilterPresetPopup,
  #editProfilePopup {
    max-height: 90vh;
    background: var(--bg-color);
    border-radius: var(--roundness);
    padding: 2rem;
    display: grid;
    gap: 1rem;
    overflow-y: scroll;
    .title {
      font-size: 1.5rem;
      color: var(--sub-color);
    }
  }
}

#tagsEdit form,
#presetEdit form {
  display: grid;
  gap: 1rem;
}

#editProfilePopup {
  width: 100%;
  max-width: 600px;
  label {
    color: var(--sub-color);
  }
  input {
    width: 100%;
  }
  textarea {
    resize: vertical;
    width: 100%;
    padding: 10px;
    line-height: 1.2rem;
    min-height: 5rem;
    max-height: 10rem;
  }

  .socialURL {
    display: flex;
  }

  .socialURL > p {
    margin-block: 0.5rem;
    margin-inline-end: 0.5rem;
  }

  .badgeSelectionContainer {
    display: flex;
    flex-wrap: wrap;
  }

  .badgeSelectionItem {
    margin-bottom: 0.5rem;
    width: max-content;
    opacity: 25%;
    cursor: pointer;
    margin-right: 0.5rem;
    margin-bottom: 0.5rem;
  }

  .badgeSelectionItem.selected,
  .badgeSelectionItem:hover {
    opacity: 100%;
  }
}
/* ... */

